package com.ranni.connector.http;

/**
 * Title: HttpServer
 * Description: 将连接器和某个servlet容器相关联
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-22 18:51
 */
public interface Container {
}
