package com.ranni.container;

/**
 * Title: HttpServer
 * Description:
 * 标准Wrapper实现类
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-27 14:59
 */
public class StandardWrapper {
}
